--- a/scripts/build
+++ b/scripts/build
@@ -1,6 +1,7 @@
 #!/bin/bash
 
-source print-head
+SCRIPT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)" 
+source $SCRIPT_DIR/print-head
 
 getopts "i:" opt $@
 
