--- a/.env.example
+++ b/.env.example
@@ -1,40 +1,20 @@
-# ==========================================
-# TASK MANAGER - Variables d'environnement
-# ==========================================
-# ⚠️ IMPORTANT : Ce fichier est un TEMPLATE
-# Copiez-le en .env et modifiez les valeurs
-# NE JAMAIS committer .env dans Git !
-
-# ==========================================
-# Project Configuration
-# ==========================================
-PROJECT_NAME=task-manager
-NODE_ENV=production
-
-# ==========================================
-# PostgreSQL Database
-# ==========================================
 DB_HOST=postgres
 DB_PORT=5432
-DB_USER=taskuser
-DB_PASS=secure_password_change_me
-DB_NAME=tasks_db
+DB_USER=postgres
+DB_PASS=Password
+DB_NAME=esgi-table
 
-# ==========================================
-# Redis Cache
-# ==========================================
 REDIS_HOST=redis
 REDIS_PORT=6379
-# REDIS_PASS=secure_redis_pass_change_me  # Décommentez si vous activez l'auth Redis
+REDIS_PASS=Password
 
-# ==========================================
-# Backend API
-# ==========================================
+VITE_API_URL=http://api:3000
 API_HOST=0.0.0.0
 API_PORT=3000
+NODE_ENV=development
 
-# ==========================================
-# Frontend
-# ==========================================
-# L'URL de l'API depuis le navigateur (après passage par Nginx)
-VITE_API_URL=http://localhost:3000/api
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=Password
+POSTGRES_DB=esgi-table
+
+REDIS_PASSWORD=Password
